--- a/modes/travelready/config/travelready.yaml
+++ b/modes/travelready/config/travelready.yaml
@@ -34,9 +34,7 @@ event_player:
     world5_completed
     stronghold_start
   travel_hit{current_player.world_id==51}:
-    stronghold_completed
-    theend_started
-
+    stronghold_jackpotcollect
 
 show_player:
   mode_travelready_started:
@@ -46,9 +44,4 @@ show_player:
     show_travelblinking:    
       loops: -1
       speed: 2
-  # balldevice_bd_scoop_ball_eject_attempt{num_attempts==0}:
-  #   show_travelworld1:
-  #     loops: 0
-  #     speed: 1
-  #     block_queue: true
-#balldevice_(name)_ball_enter
+
