--- a/modes/travelready/config/travelready.yaml
+++ b/modes/travelready/config/travelready.yaml
@@ -1,7 +1,7 @@
 #config_version=5
 mode:
     start_events: travel_ready, nethermode_ready, strongholdmode_ready, theend_ready
-    stop_events: nether_started, stronghold_started, theend_started
+    stop_events: nether_started, stronghold_start, stronghold_jackpotcollect
     priority: 2100
     restart_on_next_ball: true
 
