--- a/modes/strongholdjackpot/config/strongholdjackpot.yaml
+++ b/modes/strongholdjackpot/config/strongholdjackpot.yaml
@@ -125,7 +125,7 @@ widgets:
       x: center
       z: 200
     - type: image       
-      image: chest_large
+      image: chest_ender_animated
       anchor_x: center
       anchor_y: center
       y: center + 50
