--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,6 +1,6 @@
 events:
   game_ended: 302
-  game_started: 1400
+  game_started: 1412
 player:
   score:
     average: 15155776.067073165
@@ -17,21 +17,21 @@ player:
     - 96631950
     total: 328
 shots:
-  award_extraball: 124
-  captiveball: 1083
+  award_extraball: 125
+  captiveball: 1093
   centertarget: 1541
-  collectitem1: 7002
-  collectitem2: 6922
-  collectitem3: 5726
-  collectitem4: 6647
+  collectitem1: 7045
+  collectitem2: 6962
+  collectitem3: 5767
+  collectitem4: 6683
   collectitem5: 1881
-  collectitem_special: 2666
-  collectleftoutlane: 109
-  collectrightinlane: 112
-  craft1: 955
-  craft2: 954
-  craft3: 940
-  craft4: 952
+  collectitem_special: 2700
+  collectleftoutlane: 121
+  collectrightinlane: 123
+  craft1: 968
+  craft2: 963
+  craft3: 946
+  craft4: 959
   enderdragon_shot: 1351
   enderdragon_shot1: 217
   enderdragon_shot10: 195
@@ -51,9 +51,9 @@ shots:
   enderdragon_shot8: 105
   enderdragon_shot9: 114
   eyespinner: 1858
-  leftslingshot: 6974
-  loopleft: 7195
-  loopright: 5993
+  leftslingshot: 7043
+  loopleft: 7312
+  loopright: 6121
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -62,16 +62,19 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 702
-  mbnether_drop3: 734
-  mbnether_drop4: 263
-  mbnether_drop5: 635
+  mbnether_drop2: 709
+  mbnether_drop3: 735
+  mbnether_drop4: 264
+  mbnether_drop5: 642
   mbnether_jackpot: 29
   mbnether_superjackpot: 24
-  popbumper1: 8819
-  popbumper2: 12510
-  popbumper3: 16962
-  rightslingshot: 6024
+  night_drop1: 31
+  night_drop2: 18
+  night_drop6: 26
+  popbumper1: 8989
+  popbumper2: 12760
+  popbumper3: 17279
+  rightslingshot: 6158
   set1_center: 127
   set1_left: 241
   set1_right: 431
@@ -87,68 +90,68 @@ shots:
   shot_travel: 72
   shot_victoryloopleft: 37
   shot_victoryloopright: 28
-  skill_scoup: 686
-  spinner: 31256
+  skill_scoup: 688
+  spinner: 31691
   strongholdtravel: 50
-  tool1: 2982
-  tool2: 3793
-  tool3: 2496
+  tool1: 3008
+  tool2: 3843
+  tool3: 2507
   victoryloopleft_shot: 179
   victoryloopright_shot: 106
   village_jackpot: 22
-  villager_jackpot: 183
+  villager_jackpot: 185
   villager_spinner: 114
-  world_jackpot: 960
-  worldspinner: 5614
+  world_jackpot: 1011
+  worldspinner: 6027
 switches:
-  s_bumperrail: 10534
-  s_captiveball: 1085
-  s_centertarget: 7534
-  s_collectitem1: 11869
-  s_collectitem2: 11851
-  s_collectitem3: 6549
-  s_collectitem4: 11345
-  s_collectitem5: 11012
+  s_bumperrail: 10610
+  s_captiveball: 1095
+  s_centertarget: 7654
+  s_collectitem1: 11954
+  s_collectitem2: 11915
+  s_collectitem3: 6616
+  s_collectitem4: 11419
+  s_collectitem5: 11078
   s_credit_right: 0
-  s_drop1: 4315
-  s_drop2: 6723
-  s_drop3: 27893
-  s_drop4: 4257
-  s_drop5: 8759
-  s_drop6: 5843
-  s_left_flipper: 57178
-  s_leftinlane: 1184
-  s_leftoutlane: 1094
-  s_leftsling: 6977
-  s_loopleft: 7534
-  s_loopright: 6756
+  s_drop1: 4380
+  s_drop2: 6839
+  s_drop3: 28269
+  s_drop4: 4331
+  s_drop5: 8915
+  s_drop6: 5931
+  s_left_flipper: 58223
+  s_leftinlane: 1202
+  s_leftoutlane: 1110
+  s_leftsling: 7046
+  s_loopleft: 7651
+  s_loopright: 6884
   s_maint: 75
-  s_plungerlane: 5795
-  s_popbumper1: 8819
-  s_popbumper2: 12510
-  s_popbumper3: 16963
-  s_portal: 1238
-  s_right_flipper: 49119
-  s_rightinlane: 491
-  s_rightoutlane: 499
-  s_rightsling: 6024
-  s_scoup: 3553
-  s_spinner: 31259
-  s_start: 323
+  s_plungerlane: 5861
+  s_popbumper1: 8989
+  s_popbumper2: 12760
+  s_popbumper3: 17280
+  s_portal: 1265
+  s_right_flipper: 49899
+  s_rightinlane: 509
+  s_rightoutlane: 507
+  s_rightsling: 6158
+  s_scoup: 3611
+  s_spinner: 31694
+  s_start: 336
   s_tilt: 0
-  s_tooltarget1: 4531
-  s_tooltarget2: 5692
-  s_tooltarget3: 3722
-  s_topbumperleft: 2854
-  s_topbumperright: 4039
-  s_topkicker: 10736
-  s_trough1: 5226
-  s_trough2: 4351
-  s_trough3: 3747
-  s_trough4: 3375
-  s_troughjam: 4416
-  s_upperdrop: 4406
-  s_whitedot1: 1932
-  s_whitedot2: 2184
-  s_whitedot3: 2243
-  s_whitedot4: 2169
+  s_tooltarget1: 4570
+  s_tooltarget2: 5780
+  s_tooltarget3: 3747
+  s_topbumperleft: 2912
+  s_topbumperright: 4112
+  s_topkicker: 10882
+  s_trough1: 5295
+  s_trough2: 4406
+  s_trough3: 3790
+  s_trough4: 3418
+  s_troughjam: 4476
+  s_upperdrop: 4471
+  s_whitedot1: 1955
+  s_whitedot2: 2198
+  s_whitedot3: 2265
+  s_whitedot4: 2191
