--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -207,6 +207,11 @@ light_player:
       color: purple
       fade: 5000ms
 
+  mode_night_started:
+    lactionbar:
+      color: off
+      fade: 1000ms
+
   multiball_nightmb_ended:
     lgi:
       color: white
