--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 302
-  game_started: 1412
+  game_ended: 308
+  game_started: 1429
 player:
   score:
-    average: 15155776.067073165
+    average: 15577566.964285709
     top:
     - 883927500
     - 492815500
@@ -12,26 +12,26 @@ player:
     - 283266550
     - 261271100
     - 248686850
+    - 205055900
     - 202464900
     - 107348300
-    - 96631950
-    total: 328
+    total: 336
 shots:
-  award_extraball: 125
-  captiveball: 1093
+  award_extraball: 129
+  captiveball: 1160
   centertarget: 1541
-  collectitem1: 7045
-  collectitem2: 6962
-  collectitem3: 5767
-  collectitem4: 6683
+  collectitem1: 7117
+  collectitem2: 7029
+  collectitem3: 5828
+  collectitem4: 6747
   collectitem5: 1881
-  collectitem_special: 2700
-  collectleftoutlane: 121
-  collectrightinlane: 123
-  craft1: 968
-  craft2: 963
-  craft3: 946
-  craft4: 959
+  collectitem_special: 2769
+  collectleftoutlane: 144
+  collectrightinlane: 142
+  craft1: 1008
+  craft2: 994
+  craft3: 979
+  craft4: 990
   enderdragon_shot: 1351
   enderdragon_shot1: 217
   enderdragon_shot10: 195
@@ -51,9 +51,9 @@ shots:
   enderdragon_shot8: 105
   enderdragon_shot9: 114
   eyespinner: 1858
-  leftslingshot: 7043
-  loopleft: 7312
-  loopright: 6121
+  leftslingshot: 7161
+  loopleft: 7579
+  loopright: 6286
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -62,96 +62,98 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 709
-  mbnether_drop3: 735
-  mbnether_drop4: 264
-  mbnether_drop5: 642
-  mbnether_jackpot: 29
+  mbnether_drop2: 723
+  mbnether_drop3: 786
+  mbnether_drop4: 276
+  mbnether_drop5: 658
+  mbnether_jackpot: 30
   mbnether_superjackpot: 24
-  night_drop1: 31
+  night_drop1: 91
   night_drop2: 18
-  night_drop6: 26
-  popbumper1: 8989
-  popbumper2: 12760
-  popbumper3: 17279
-  rightslingshot: 6158
-  set1_center: 127
-  set1_left: 241
-  set1_right: 431
-  set2_center: 113
-  set2_left: 161
-  set2_right: 429
-  set3_center: 131
-  set3_left: 102
-  set3_right: 307
-  set4_center: 135
-  set4_left: 94
-  set4_right: 356
+  night_drop6: 88
+  night_jackpot: 33
+  night_super: 1
+  popbumper1: 9368
+  popbumper2: 13214
+  popbumper3: 18107
+  rightslingshot: 6381
+  set1_center: 128
+  set1_left: 242
+  set1_right: 432
+  set2_center: 114
+  set2_left: 162
+  set2_right: 447
+  set3_center: 132
+  set3_left: 103
+  set3_right: 315
+  set4_center: 138
+  set4_left: 95
+  set4_right: 357
   shot_travel: 72
   shot_victoryloopleft: 37
   shot_victoryloopright: 28
-  skill_scoup: 688
-  spinner: 31691
+  skill_scoup: 698
+  spinner: 32704
   strongholdtravel: 50
-  tool1: 3008
-  tool2: 3843
-  tool3: 2507
+  tool1: 3098
+  tool2: 3923
+  tool3: 2585
   victoryloopleft_shot: 179
   victoryloopright_shot: 106
   village_jackpot: 22
-  villager_jackpot: 185
+  villager_jackpot: 202
   villager_spinner: 114
-  world_jackpot: 1011
-  worldspinner: 6027
+  world_jackpot: 1064
+  worldspinner: 6936
 switches:
-  s_bumperrail: 10610
-  s_captiveball: 1095
-  s_centertarget: 7654
-  s_collectitem1: 11954
-  s_collectitem2: 11915
-  s_collectitem3: 6616
-  s_collectitem4: 11419
-  s_collectitem5: 11078
+  s_bumperrail: 10766
+  s_captiveball: 1162
+  s_centertarget: 7878
+  s_collectitem1: 12123
+  s_collectitem2: 12061
+  s_collectitem3: 6786
+  s_collectitem4: 11576
+  s_collectitem5: 11235
   s_credit_right: 0
-  s_drop1: 4380
-  s_drop2: 6839
-  s_drop3: 28269
-  s_drop4: 4331
-  s_drop5: 8915
-  s_drop6: 5931
-  s_left_flipper: 58223
-  s_leftinlane: 1202
-  s_leftoutlane: 1110
-  s_leftsling: 7046
-  s_loopleft: 7651
-  s_loopright: 6884
+  s_drop1: 4529
+  s_drop2: 7064
+  s_drop3: 30430
+  s_drop4: 4484
+  s_drop5: 9212
+  s_drop6: 6128
+  s_left_flipper: 60761
+  s_leftinlane: 1242
+  s_leftoutlane: 1158
+  s_leftsling: 7164
+  s_loopleft: 7918
+  s_loopright: 7050
   s_maint: 75
-  s_plungerlane: 5861
-  s_popbumper1: 8989
-  s_popbumper2: 12760
-  s_popbumper3: 17280
-  s_portal: 1265
-  s_right_flipper: 49899
-  s_rightinlane: 509
-  s_rightoutlane: 507
-  s_rightsling: 6158
-  s_scoup: 3611
-  s_spinner: 31694
-  s_start: 336
-  s_tilt: 0
-  s_tooltarget1: 4570
-  s_tooltarget2: 5780
-  s_tooltarget3: 3747
-  s_topbumperleft: 2912
-  s_topbumperright: 4112
-  s_topkicker: 10882
-  s_trough1: 5295
-  s_trough2: 4406
-  s_trough3: 3790
-  s_trough4: 3418
-  s_troughjam: 4476
-  s_upperdrop: 4471
-  s_whitedot1: 1955
-  s_whitedot2: 2198
-  s_whitedot3: 2265
-  s_whitedot4: 2191
+  s_plungerlane: 5986
+  s_popbumper1: 9368
+  s_popbumper2: 13214
+  s_popbumper3: 18108
+  s_portal: 1312
+  s_right_flipper: 52070
+  s_rightinlane: 559
+  s_rightoutlane: 542
+  s_rightsling: 6381
+  s_scoup: 3714
+  s_spinner: 32707
+  s_start: 357
+  s_tilt: 1178
+  s_tooltarget1: 4710
+  s_tooltarget2: 5999
+  s_tooltarget3: 3865
+  s_topbumperleft: 2993
+  s_topbumperright: 4235
+  s_topkicker: 11198
+  s_trough1: 5390
+  s_trough2: 4493
+  s_trough3: 3865
+  s_trough4: 3494
+  s_troughjam: 4563
+  s_upperdrop: 4622
+  s_whitedot1: 2004
+  s_whitedot2: 2236
+  s_whitedot3: 2309
+  s_whitedot4: 2249
