--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -1,12 +1,12 @@
-difficulty_extraball1:
+difficulty_night:
   expire: null
-  value: 6
-difficulty_extraball2:
+  value: 76
+difficulty_villager:
   expire: null
-  value: 6
-difficulty_tools:
+  value: 21
+game_mode:
   expire: null
-  value: 4
-game_num_players:
+  value: NORMAL
+game_mode_display:
   expire: null
-  value: 2
+  value: Normal Mode
