--- a/modes/night/config/night.yaml
+++ b/modes/night/config/night.yaml
@@ -17,10 +17,16 @@ variable_player:
 
   night_drop1_hit:
     score: 10000 * current_player.multiplier_mb * current_player.sword
-    night_jackpot: 100000
+    night_jackpot: 100000 * current_player.sword
   night_drop6_hit:
     score: 10000 * current_player.multiplier_mb * current_player.sword
-    night_jackpot: 100000
+    night_jackpot: 100000 * current_player.sword
+
+  night_jackpot_collected:
+    score: current_player.night_jackpot * current_player.multiplier_mb
+    night_jackpot:
+      int: 1000000
+      action: set
 
 show_player:
   mode_night_started:
@@ -33,8 +39,13 @@ show_player:
       loops: 0
       speed: 1
 
-  nightsetup_retry:
+  creepersetup_retry:
     show_creepersetup:
+      loops: 0
+      speed: 1
+
+  night_jackpot_hit:
+    show_nightjackpot:
       loops: 0
       speed: 1
 
@@ -55,6 +66,13 @@ shots:
     reset_events: creepersetup_complete
     enable_events: creepersetup_complete
     disable_events: mode_night_started
+  night_jackpot:
+    switch: s_captiveball
+    profile: mbtarget
+    show_tokens:
+      light: l_captivejackpot
+    disable_events: night_jackpot_hit
+    enable_events: mode_night_started, night_jackpot_collected
 
 shot_groups:
   mbcreepers:
@@ -119,6 +137,43 @@ widgets:
       z: 100
       anchor_x: center
       anchor_y: center
+
+  widget_nightjackpot_collected:  #WORLD JACKPOT
+    - type: text       
+      text: NIGHT JACKPOT COLLECTED
+      font_name: ARLRDBD
+      font_size: 36
+      color: white
+      y: center + 75
+      x: center + 75
+      z: 205
+      anchor_x: center
+      anchor_y: center   
+    - type: text       
+      text: (player|night_jackpot) x (player|multiplier_mb) 
+      number_grouping: true
+      font_name: ARLRDBD
+      font_size: 52
+      color: white
+      y: center + 25
+      x: center + 50
+      z: 205
+      anchor_x: center
+      anchor_y: center     
+    - type: image       
+      image: popup_background
+      anchor_x: center
+      anchor_y: center
+      y: center + 50
+      x: center
+      z: 200
+    - type: image       
+      image: CreeperFace
+      anchor_x: center
+      anchor_y: center
+      y: center + 50
+      x: center - 300
+      z: 205
 
 
 event_player:
